<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <!--<item-->
        <!--android:id="@+id/action_user"-->
        <!--android:title="@string/my_library"-->
        <!--android:icon="@drawable/img_btn_user"-->
        <!--app:showAsAction="ifRoom" />-->

    <!--<item-->
        <!--android:id="@+id/action_library"-->
        <!--android:title="@string/my_library"-->
        <!--android:icon="@drawable/img_icon_library"-->
        <!--app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="0"
        android:title="@string/menu_setting"/>

    <item
        android:id="@+id/action_rate"
        android:orderInCategory="1"
        android:title="@string/menu_rate"/>

    <item
        android:id="@+id/action_share_fb"
        android:orderInCategory="2"
        android:title="@string/menu_share_fb"/>

    <item
        android:id="@+id/action_share_google"
        android:orderInCategory="3"
        android:title="@string/menu_share_google"/>

    <item
        android:id="@+id/action_remove_ads"
        android:orderInCategory="4"
        android:title="@string/menu_remove_ads"/>
</menu>
