<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_board">

    <com.thanhle.englishvocabulary.view.TypingTextView
        android:id="@+id/tvApplicationName"
        style="@style/splash_application_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/common_margin_layout_large"
        android:text="@string/app_name" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/progressbar_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/common_margin_layout_medium"
        android:visibility="gone" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_sign_in"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/progressBar"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white" />

    <RelativeLayout
        android:id="@+id/rlLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/tvLoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/login_title"
                android:textColor="@color/white"
                android:textSize="@dimen/common_textsize_xxxlarge" />

            <LinearLayout
                android:id="@+id/btnLoginFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLoginTitle"
                android:layout_marginLeft="@dimen/common_margin_layout_xlarge2"
                android:layout_marginRight="@dimen/common_margin_layout_xlarge2"
                android:layout_marginTop="@dimen/common_margin_layout_xlarge"
                android:background="@drawable/facebook_button"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_icon_facebook" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/dark_blue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:padding="@dimen/common_margin_layout_medium"
                    android:text="@string/login_facebook"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnLoginGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnLoginFacebook"
                android:layout_marginLeft="@dimen/common_margin_layout_xlarge2"
                android:layout_marginRight="@dimen/common_margin_layout_xlarge2"
                android:layout_marginTop="@dimen/common_margin_layout_medium"
                android:background="@drawable/google_button"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_icon_googleplus" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/dark_red" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/common_margin_layout_medium"
                    android:text="@string/login_google"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvLoginOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnLoginGoogle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/common_margin_layout_larger"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="@dimen/common_textsize_xlarge"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLoginOr"
                android:layout_marginLeft="@dimen/common_margin_layout_xlarge2"
                android:layout_marginRight="@dimen/common_margin_layout_xlarge2"
                android:layout_marginTop="@dimen/common_margin_layout_larger"
                android:background="@drawable/img_bg_cell"
                android:paddingBottom="@dimen/common_margin_layout_medium">

                <EditText
                    android:id="@+id/tvLoginUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_margin_layout_medium"
                    android:background="@color/gray"
                    android:hint="@string/login_username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="@dimen/common_margin_layout_medium"
                    android:singleLine="true"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/progress_bar_rim_color" />

                <EditText
                    android:id="@+id/tvLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvLoginUsername"
                    android:layout_marginBottom="@dimen/common_margin_layout_medium"
                    android:layout_marginLeft="@dimen/common_margin_layout_medium"
                    android:layout_marginRight="@dimen/common_margin_layout_medium"
                    android:background="@color/gray"
                    android:hint="@string/login_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/common_margin_layout_medium"
                    android:singleLine="true"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/progress_bar_rim_color" />

                <TextView
                    android:id="@+id/btnLoginForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvLoginPassword"
                    android:layout_marginBottom="@dimen/common_margin_layout_medium"
                    android:layout_marginLeft="@dimen/common_margin_layout_large"
                    android:layout_marginRight="@dimen/common_margin_layout_medium"
                    android:layout_marginTop="@dimen/common_margin_layout"
                    android:background="@drawable/item_background_click"
                    android:padding="@dimen/common_margin_layout"
                    android:text="@string/login_forget_password"
                    android:textColor="@color/bright_gray" />

                <TextView
                    android:id="@+id/btnLoginButton"
                    style="@style/button_blue_white_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/tvLoginPassword"
                    android:layout_marginBottom="@dimen/common_margin_layout_medium"
                    android:layout_marginLeft="@dimen/common_margin_layout_large"
                    android:layout_marginRight="@dimen/common_margin_layout_medium"
                    android:minWidth="@dimen/login_button_min_width"
                    android:padding="@dimen/common_margin_layout_medium"
                    android:text="@string/login_button" />
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/btnLoginRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/common_margin_layout_medium"
            android:background="@drawable/item_background_click"
            android:padding="@dimen/common_margin_layout"
            android:text="@string/login_new_account"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/tvRegisterTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/register_title"
                android:textColor="@color/white"
                android:textSize="@dimen/common_textsize_xxxlarge" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvRegisterTitle"
                android:layout_marginLeft="@dimen/common_margin_layout_xlarge2"
                android:layout_marginRight="@dimen/common_margin_layout_xlarge2"
                android:layout_marginTop="@dimen/common_margin_layout_xlarge2"
                android:background="@drawable/img_bg_cell">

                <EditText
                    android:id="@+id/tvRegisterUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_margin_layout_medium"
                    android:background="@color/gray"
                    android:hint="@string/register_username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="@dimen/common_margin_layout_medium"
                    android:singleLine="true"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/progress_bar_rim_color" />

                <EditText
                    android:id="@+id/tvRegisterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvRegisterUsername"
                    android:layout_marginBottom="@dimen/common_margin_layout_medium"
                    android:layout_marginLeft="@dimen/common_margin_layout_medium"
                    android:layout_marginRight="@dimen/common_margin_layout_medium"
                    android:background="@color/gray"
                    android:hint="@string/register_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/common_margin_layout_medium"
                    android:singleLine="true"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/progress_bar_rim_color" />

                <EditText
                    android:id="@+id/tvRegisterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvRegisterEmail"
                    android:layout_marginBottom="@dimen/common_margin_layout_medium"
                    android:layout_marginLeft="@dimen/common_margin_layout_medium"
                    android:layout_marginRight="@dimen/common_margin_layout_medium"
                    android:background="@color/gray"
                    android:hint="@string/register_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:padding="@dimen/common_margin_layout_medium"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/progress_bar_rim_color" />

                <EditText
                    android:id="@+id/tvRegisterPasswordAgain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvRegisterPassword"
                    android:layout_marginBottom="@dimen/common_margin_layout_medium"
                    android:layout_marginLeft="@dimen/common_margin_layout_medium"
                    android:layout_marginRight="@dimen/common_margin_layout_medium"
                    android:background="@color/gray"
                    android:hint="@string/register_password_again"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/common_margin_layout_medium"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/progress_bar_rim_color" />

                <TextView
                    android:id="@+id/btnRegisterButton"
                    style="@style/button_blue_white_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/tvRegisterPasswordAgain"
                    android:layout_marginBottom="@dimen/common_margin_layout_medium"
                    android:layout_marginRight="@dimen/common_margin_layout_medium"
                    android:minWidth="@dimen/login_button_min_width"
                    android:padding="@dimen/common_margin_layout_medium"
                    android:text="@string/register_button" />

                <TextView
                    android:id="@+id/tvRegisterPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvRegisterPasswordAgain"
                    android:layout_marginBottom="@dimen/common_margin_layout_medium"
                    android:layout_marginLeft="@dimen/common_margin_layout"
                    android:layout_marginRight="@dimen/common_margin_layout"
                    android:layout_toLeftOf="@id/btnRegisterButton"
                    android:background="@drawable/item_background_click"
                    android:padding="@dimen/common_margin_layout"
                    android:text="@string/register_policy"
                    android:textColor="@color/bright_gray" />
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/btnRegisterLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/common_margin_layout_medium"
            android:background="@drawable/item_background_click"
            android:padding="@dimen/common_margin_layout"
            android:text="@string/register_login"
            android:textColor="@color/white" />
    </RelativeLayout>
</RelativeLayout>